--- a/www/index.html
+++ b/www/index.html
@@ -2,15 +2,19 @@
 <html ng-app="taskManager">
 <head>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <!-------------------------------------------------------------------->
     <!--for development start-->
-    <script src="scriptsDev/lib/angular.min.js"></script>
-    <script src="scriptsDev/lib/angular-ui-router.min.js"></script>
-    <script src="scriptsDev/app.js"></script>
-    <script src="scriptsDev/controllers/main.js"></script>
+    <!--<script src="scriptsDev/lib/angular.min.js"></script>-->
+    <!--<script src="scriptsDev/lib/angular-ui-router.min.js"></script>-->
+    <!--<script src="scriptsDev/app.js"></script>-->
+    <!--<script src="scriptsDev/controllers/main.js"></script>-->
     <!--for development end-->
-    <!---->
+    <!-------------------------------------------------------------------->
     <!--for build start-->
+    <script src="scriptsBuild/scripts.min.js"></script>
     <!--for build end-->
+    <!-------------------------------------------------------------------->
+
 </head>
 <body>
 <div ui-view></div>
