--- a/www/index.html
+++ b/www/index.html
@@ -2,16 +2,27 @@
 <html ng-app="taskManager">
 <head>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <!-------------------------------------------------------------------->
     <!--for development start-->
-    <!--<script src="scriptsDev/lib/angular.min.js"></script>-->
-    <!--<script src="scriptsDev/lib/angular-ui-router.min.js"></script>-->
-    <!--<script src="scriptsDev/app.js"></script>-->
-    <!--<script src="scriptsDev/controllers/main.js"></script>-->
+    <script src="scriptsDev/lib/angular.min.js"></script>
+    <script src="scriptsDev/lib/angular-ui-router.min.js"></script>
+    <script src="scriptsDev/lib/ui-bootstrap-tpls-0.11.0.min.js"></script>
+
+    <script src="scriptsDev/app.js"></script>
+
+    <script src="scriptsDev/controllers/main.js"></script>
+    <script src="scriptsDev/controllers/signUp.js"></script>
+    <script src="scriptsDev/controllers/modalCtrl.js"></script>
+    <script src="scriptsDev/controllers/preView.js"></script>
+    <script src="scriptsDev/controllers/mainView.js"></script>
+
+    <script src="scriptsDev/services/authenticate.js"></script>
+    <script src="scriptsDev/services/modelUser.js"></script>
     <!--for development end-->
     <!-------------------------------------------------------------------->
     <!--for build start-->
-    <script src="scriptsBuild/scripts.min.js"></script>
+    <!--<script src="scriptsBuild/scripts.min.js"></script>-->
     <!--for build end-->
     <!-------------------------------------------------------------------->
 
