--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,8 @@
     <script src="scriptsDev/controllers/modalCtrl.js"></script>
     <script src="scriptsDev/controllers/preView.js"></script>
     <script src="scriptsDev/controllers/mainView.js"></script>
+    <script src="scriptsDev/controllers/newTask.js"></script>
+    <script src="scriptsDev/controllers/newTask.js"></script>
 
     <script src="scriptsDev/services/authenticate.js"></script>
     <script src="scriptsDev/services/modelUser.js"></script>
