--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,9 @@
     <script src="scriptsDev/lib/angular.min.js"></script>
     <script src="scriptsDev/lib/angular-ui-router.min.js"></script>
     <script src="scriptsDev/lib/ui-bootstrap-tpls-0.11.0.min.js"></script>
+    <script src="scriptsDev/lib/jquery-1.11.0.min.js"></script>
+
+    <script src="scriptsDev/test_user.js"></script>
 
     <script src="scriptsDev/app.js"></script>
 
@@ -21,6 +24,9 @@
 
     <script src="scriptsDev/services/authenticate.js"></script>
     <script src="scriptsDev/services/modelUser.js"></script>
+
+    <script src="scriptsDev/directives/mainViewDirective.js"></script>
+
     <!--for development end-->
     <!-------------------------------------------------------------------->
     <!--for build start-->
